swagger api documentation add and fixed some import issues | 2 of my apis are working in swagger for now
